NPTF-173 fix profile when text align is not start

--- a/src/components/ProfilePicture/ProfilePicture.scss
+++ b/src/components/ProfilePicture/ProfilePicture.scss
@@ -12,6 +12,7 @@
     }
 
     img {
+        left: 0;
         margin: 2px;
         height: calc(100% - 4px);
         width: calc(100% - 4px);
